Thu May 19 16:56:41 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sybdb.h src/dblib/dblib.c: support bigint on dblib

Thu May 19 11:07:35 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild: use git

Mon May 16 15:28:08 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h misc/commit src/apps/tsql.c src/ctlib/blk.c:
	* src/ctlib/cs.c src/ctlib/ct.c src/ctlib/ctutil.c src/dblib/bcp.c:
	* src/dblib/dblib.c src/odbc/connectparams.c src/odbc/odbc.c:
	* src/pool/member.c src/tds/bulk.c src/tds/challenge.c:
	* src/tds/config.c src/tds/convert.c src/tds/data.c:
	* src/tds/example/token1.c src/tds/example/token2.c:
	* src/tds/gssapi.c src/tds/login.c src/tds/mem.c src/tds/net.c:
	* src/tds/numeric.c src/tds/query.c src/tds/read.c src/tds/sspi.c:
	* src/tds/token.c src/tds/unittests/common.c:
	* src/tds/unittests/dataread.c src/tds/unittests/dynamic1.c:
	* src/tds/unittests/flags.c src/tds/unittests/t0001.c:
	* src/tds/unittests/t0002.c src/tds/unittests/t0003.c:
	* src/tds/unittests/t0004.c src/tds/unittests/t0005.c:
	* src/tds/unittests/t0006.c src/tds/unittests/toodynamic.c:
	* src/tds/unittests/utf8_1.c src/tds/unittests/utf8_2.c:
	* src/tds/unittests/utf8_3.c src/tds/vstrbuild.c src/tds/write.c:
	- renames TDS_SUCCEED with TDS_SUCCESS

Mon May 16 14:27:22 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* .gitignore: ignore autogenerated file

Mon May 16 11:57:08 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tdsproto.h src/tds/login.c:
	- add a new tdsproto.h file and put protocol related defines here

Mon May 16 11:52:31 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO.freddy:
	- add a new tdsproto.h file and put protocol related defines here

Mon May 16 10:51:06 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* Nmakefile README.Windows include/fakepoll.h src/apps/bsqldb.c:
	* src/apps/bsqlodbc.c src/apps/datacopy.c src/apps/defncopy.c: